tests/expectations/compiler/async_blocks/external_async_block_future_access_fail.out
Error [ETYC0372117]: Expected type `u16` but type `u8` was found.
    --> compiler-test:9:26
     |
   9 |             let x: u16 = f.0;
     |                          ^^^
Error [ETYC0372117]: Expected type `u8` but type `u16` was found.
    --> compiler-test:10:25
     |
  10 |             let y: u8 = f.1;
     |                         ^^^
Error [ETYC0372090]: Cannot access argument `2` from future. The future only has `2` arguments.
    --> compiler-test:11:21
     |
  11 |             let z = f.2;
     |                     ^^^
